--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -81,3 +81,122 @@
 .helpy:hover{
    color: var(--dk-red);
 }
+
+.form{
+   position: absolute;
+   top: 15px;
+   width: 100%;
+   margin-top: 100px;
+   transition: 0.3s all ease-in-out;
+}
+
+.login{
+   background-color: var(--bg-light);
+   height: 28rem;
+   width: 40rem;
+   border-radius: 2em;
+   padding: 20px;
+   flex-direction: column;
+}
+
+
+.visible{
+   display: none;
+}
+
+input, select{
+   height: 1.5em;
+   width: 11rem;
+   font-size: 1.1rem;
+   outline: none;
+   border-radius: 5px;
+   border: 1px solid black;
+}
+.login .forms{
+   margin-top: 20px;
+}
+.login a{
+   margin-left: 34%;
+   margin-top: 10px;
+   text-decoration: none;
+}
+
+.names{
+   /* justify-content: space-around; */
+   gap: 10px;
+   margin: 10px 0px;
+}
+.names .lab input{
+   width: 23rem;
+}
+.mb, .per-det, .dob{
+   margin: 10px 0px;
+}
+.per-det input, 
+.per-det select, 
+.mb{
+   margin-right: 10px;
+}
+.mb input{
+   width: 17rem;
+}
+input{
+   padding: 5px;
+}
+select{
+   width: 10rem;
+   height: 2rem;
+}
+.input{
+   display: flex;
+   flex-direction: column;
+}
+.addr{
+   margin-top: 10px;
+}
+.addr .input{
+   margin-right: 10px;
+}
+.addr .input.add input{
+   width: 23rem;
+}
+button{
+   height: 2em;
+   width: 5em;
+   font-size: 1.1rem;
+   outline: none;
+   border-radius: 10px;
+   border: 1px solid black;
+   margin-top: 10%;
+   margin-left: 40%;
+   background-color: rgb(0, 191, 255);
+   cursor: pointer;
+   color: white;
+   box-shadow: 2px 2px 5px grey;
+}
+.forms{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+.switch{
+   display: none;
+}
+.form.show{
+   /* display: flex; */
+   transform: translateY(0%);
+   /* transition: 0.5s all ease-in-out; */
+}
+.form.hide{
+   /* display: none; */
+   transform: translateY(-140%);
+   transition: 0.3s all ease-in-out;
+}
+
+
+.login-form{
+   justify-content: center;
+   align-items: center;
+   margin-top: 16%;
+}
