--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
   height: 2.6em;
   margin-top: 10px;
   border-radius: 20px;
-  box-shadow: 2px 3px 9px var(--md-red);
+  box-shadow: 2px 3px 9px rgba(54, 54, 54, 0.234);
 }
 .list ul{
   justify-content: space-around;
@@ -23,11 +23,63 @@
   list-style: none;
   font-weight: 500;
   font-size: 1.1rem;
-  color: white;
   /* color: rgb(48, 10, 10); */
   cursor: pointer;
   transition: 0.2s all ease-in-out;
 }
-.list ul li:hover{
+.list ul li a{
   color: rgb(184, 92, 92);
+  text-decoration: none;
+  transition: 0.2s all ease-in-out;
+}
+.list ul li a:hover{
+  color: rgb(168, 80, 80);
+  font-weight: 800;
+}
+
+
+/* Error Page */
+
+.error {
+  height: 80vh;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.error h1 {
+  position: absolute;
+  font-size: 30em;
+  opacity: 0.1;
+  z-index: 1;
+}
+
+.error p {
+  font-size: 2em;
+  color: rgb(5, 59, 3);
+  margin-bottom: 1em;
+  z-index: 2;
+}
+
+.go-home {
+  height: 2.5rem;
+  width: 7rem;
+  font-size: 16px;
+  background-color: #0e7fff;
+  color: #ffff;
+  border: none;
+  border-radius: 6px;
+  z-index: 11;
+}
+
+.go-home:hover {
+  box-shadow: 0px 0px 5px #459cff;
+}
+
+.link {
+  z-index: 2;
+}
+
+.list ul li .active{
+  font-weight: 800;
 }
