--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -41,11 +41,13 @@
    font-size: 3em;
    font-weight: 800;
    letter-spacing: 10px;
+   z-index: 6;
 }
 .content p{
    color: white;
    font-size: 1.5rem;
    letter-spacing: 35px;
+   z-index: 6;
 }
 .content form{
    z-index: 10;
@@ -91,12 +93,71 @@
 }
 
 .login{
-   background-color: var(--bg-light);
+   /* background-color: var(--bg-light); */
+   background: #165e8b57;
+   color: white;
    height: 28rem;
    width: 40rem;
    border-radius: 2em;
    padding: 20px;
    flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   box-shadow: 4px 4px 10px ;
+   box-shadow: rgba(0, 0, 0, 0.652) 0px 7px 29px 0px;
+   font-weight: 500;
+   font-size: 1.1em;
+}
+.login input,
+.login select{
+   background: transparent;
+   color: white;
+   border: none;
+   border-bottom: 2px solid white;
+   z-index: 6;
+}
+.login label{
+   transform: translate(8px, -34px);
+   /* opacity: 0; */
+   transition: 0.3s all ease-in-out;
+   z-index: 5;
+}
+.login form{
+   margin-top: 20px;
+}
+
+.login input:focus,
+.login input:valid,
+.login select:valid,
+.login select:focus{
+   background: rgba(0, 149, 255, 0.201);
+   border-bottom: 2px solid rgb(43, 255, 0);
+}
+
+.login input:valid~label{
+   transform: translate(0px, -63px);
+   /* color: black; */
+}
+.login button{
+   background: #0972ff54;
+}
+.login button:hover{
+   background: #085ac66a;
+}
+.login a{
+   color: white;
+}
+.login .dob{
+   flex-direction: row;
+}
+.login .dob label{
+   margin-left: 10px;
+   margin-right: 5px;
+   transform: translate(0px, 10px);
+}
+
+.lab{
+   transition: 0.3s all ease-in-out;
 }
 
 
@@ -116,7 +177,7 @@ input, select{
    margin-top: 20px;
 }
 .login a{
-   margin-left: 34%;
+   /* margin-left: 34%; */
    margin-top: 10px;
    text-decoration: none;
 }
@@ -126,7 +187,7 @@ input, select{
    gap: 10px;
    margin: 10px 0px;
 }
-.names .lab input{
+.names .lab-name input{
    width: 23rem;
 }
 .mb, .per-det, .dob{
@@ -136,6 +197,9 @@ input, select{
 .per-det select, 
 .mb{
    margin-right: 10px;
+}
+.det span{
+   font-weight: 700;
 }
 .mb input{
    width: 17rem;
@@ -167,8 +231,8 @@ button{
    outline: none;
    border-radius: 10px;
    border: 1px solid black;
-   margin-top: 10%;
-   margin-left: 40%;
+   /* margin-top: 10%;
+   margin-left: 40%; */
    background-color: rgb(0, 191, 255);
    cursor: pointer;
    color: white;
@@ -178,6 +242,10 @@ button{
    display: flex;
    justify-content: center;
    align-items: center;
+}
+.forms button{
+   margin-left: 40%;
+   margin-top: 7%;
 }
 
 .switch{
@@ -194,9 +262,36 @@ button{
    transition: 0.3s all ease-in-out;
 }
 
+option{
+   height: 30px;
+   width: 50px;
+}
 
 .login-form{
    justify-content: center;
    align-items: center;
-   margin-top: 16%;
+   margin-top: 10%;
+}
+.login-form form{
+   justify-content: center;
+   flex-direction: column;
+   align-items: center;
+}
+.login-form .input{
+   margin-bottom: 2em;
+}
+.login-form .input input{
+   width: 15em;
+}
+/* .login-form button{
+   /* margin-left: 45px; 
+} 
+*/
+input{
+   margin-top: 5px;
+}
+
+.blure{
+   filter: blur(15px);
+   /* opacity: ; */
 }
