--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,10 @@ body{
   width: 100vw;
   margin: 0;
   padding: 0;
-  background-color: var(--bg-light);
+  /* background-color: var(--bg-light); */
   font-family: 'Open Sans', sans-serif;
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 h1, h2, h3, p, span, ul, li{
