--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,14 +6,16 @@
   top: 0;
   /* bottom: 0;
   left: 0; */
+  
 }
 .Navbar .list{
-  background-color: var(--lt-red);
+  background-color: #164863;
+  /* background-color: var(--lt-red); */
   width: 50%;
   height: 2.6em;
   margin-top: 10px;
   border-radius: 20px;
-  box-shadow: 2px 3px 9px rgba(54, 54, 54, 0.234);
+  box-shadow: 2px 3px 9px rgba(102, 102, 102, 0.552);
 }
 .list ul{
   justify-content: space-around;
@@ -28,12 +30,14 @@
   transition: 0.2s all ease-in-out;
 }
 .list ul li a{
-  color: rgb(184, 92, 92);
+  /* color: rgb(184, 92, 92); */
+  color: white;
   text-decoration: none;
   transition: 0.2s all ease-in-out;
+  font-weight: 800;
 }
 .list ul li a:hover{
-  color: rgb(168, 80, 80);
+  color: rgb(197, 117, 117);
   font-weight: 800;
 }
 
@@ -80,6 +84,6 @@
   z-index: 2;
 }
 
-.list ul li .active{
+/* .list ul li .active{
   font-weight: 800;
-}
+} */
