--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,6 +15,7 @@ body{
   font-family: 'Open Sans', sans-serif;
   overflow-x: hidden;
   scroll-behavior: smooth;
+  align-items: start;
 }
 
 h1, h2, h3, p, span, ul, li{
