--- a/client/src/components/DonerDashbord.css
+++ b/client/src/components/DonerDashbord.css
@@ -145,9 +145,7 @@
    justify-content: center;
    align-items: center;
 }
-.record span:nth-child(3){
-   cursor: pointer;
-}
+
 .appointment .record:hover{
    background-color: rgb(206, 206, 206);
 }
@@ -155,5 +153,10 @@
    border: 1px solid rgb(63, 63, 63);
    box-shadow: none;
    background-color: red;
+}
+.record .pdf i{
+   font-size: 1.7em;
+   color:  rgb(173, 1, 1);
+   cursor: pointer;
 }
 
