--- a/src/components/LabDasboard.css
+++ b/src/components/LabDasboard.css
@@ -204,7 +204,7 @@
 
 .blur{
    filter: blur(5px);
-   z-index: -1;
+   /* z-index: -1; */
    color: #483285;
 }
 
@@ -393,4 +393,60 @@ hr{
    transform: translateY(0);
 }
 
+
+.edit-btn{
+   font-size: 1.3em;
+   margin-top: 12px;
+   position: relative;
+   margin-left: 95%;
+   cursor: pointer;
+}
+.edit-btn:hover{
+   box-shadow: 2px 2px 6px 1px black;
+}
+
+.popup{
+   background-color: rgb(179, 202, 241);
+   height: 25rem;
+   width: 25rem;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   font-size: 1.1em;
+   left: calc(50% - 25rem/2);
+   top: 20%;
+   border-radius: 20px;
+   box-shadow: 4px 4px 8px rgb(66, 66, 66);
+   z-index: 8;
+   transition: 0.3s all ease-in-out;
+}
+.popup form{
+   flex-direction: column;
+}
+.popup h3{
+   margin-bottom: 20px;
+   font-size: 1.4em;
+}
+.popup .btn{
+   margin-top: 20px;
+}
+.popup form input{
+   width: 20rem;
+}
+
+.popup .cancel{
+   margin-left: 10px;
+   padding: 5px 20px;
+   border-radius: 10px;
+   margin-top: 15px;
+   border: 2px solid black;
+   background-color: rgb(197, 16, 16);
+   color: white;
+   cursor: pointer;
+}
+
+.translate{
+   transform: translateY(-140%);
+}
 
